[package]
name = "lws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.2"
hex = "0.4.3"
base64 = "0.13.0"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.86"
aes = "0.8.1"
cmac = "0.7.1"
log = { version = "0.4.0", features = ["std"] }
log4rs = "1.2.0"
reqwest = { version = "0.11.12", features = ["json"] }
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["full"] }

# log4rs = { version = "1.2.0", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }