[package]
name = "lws"
version = "0.1.0"
edition = "2021"
default-run = "lws"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
hex = "0.4.3"
base64 = "0.21.4"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.106"
aes = "0.8.3"
cmac = "0.7.2"
log = { version = "0.4.20", features = ["std"] }
log4rs = "1.2.0"
reqwest = { version = "0.11.20", features = ["json"] }
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
indoc = "2.0.4"

# log4rs = { version = "1.2.0", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }